--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+.center {
+  display: flex;
+  justify-content: center;
+}
+
+.button {
+  cursor: pointer;
+}
